tests/ide_unmerged_deps/slow_dependent.js
// @flow

import {x} from './dependency';

(x: number); // error

declare var sleep: $Flow$DebugSleep;
sleep(3);
